assets/css/style.css
/* home */

/* Homepage Slogan CSS */



.slogans {

  display: grid;

  grid-template-columns: 1fr;

  padding-top: 35px;

}



.slogan-name {

  display: flex;

  align-items: center;

  justify-content: center;

}

/*Homepage Slogan CSS*/



  .slogans {

    display: grid;

    grid-template-columns: repeat(2, 1fr);

  }

.slogans img {

  width: 50%;

  display: block;

  margin-left: auto;

  margin-right: auto;

  padding-bottom: 40px;
}

/*Homepage Slogans CSS*/



  .slogans {

    grid-template-columns: repeat(3, 1fr);

  }




/* Menu Page */

/* Phone */
.menu-section-title {

  background-color: #00493a;

  color: #ffffff;

  font-size: 48px;

  padding: 10px;

}



.menu-items {

  display: grid;

  grid-template-columns: 1fr;

}



.menu-item {

  display: grid;

  grid-template-columns: 2fr 3fr;

}

.menu-item-desc {

  font-size: 24px;

}

.menu-item img {

  max-width: 100%;

  border-radius: 50%;

  object-fit: cover;

  width: 250px;

  height: 250px;

}

.smoothie-desc {

  font-size: 36px;

  padding-top: 40px;

}


.smoothie-list {

  text-align: center;

  font-size: 24px;

}


.smoothie-list p {

  font: ;

  font-size: 27px;

  padding-bottom: 30px;

}

/* menu button */

  .button {

  background-color: white;

  color: black;

  border: 2px solid #00493a;

  padding: 16px 32px;

  text-align: center;

  text-decoration: none;

  display: inline-block;

  font-size: 36px;

}



.button:hover {

  background-color: #00493a;

  color: #ffffff;

}



.button-container {

  text-align: center;

}

/* Menu Items */

.menu-section-title {
  background: #00493a;
}

.menu-items {
  display: grid;
  grid-template-columns: 1fr;
}

.menu-item {
  display: grid;
  grid-template-columns: 2fr 3fr;
}

/* Tablet and up */

@media (min-width: 768px) {

  /*Navigation Menu CSS*/

.main-quote {

    font-size: 25x;

    padding: 60px;

    text-align: center;
  }

  #navbar ul {

    list-style: none;

    padding: 10px;

    text-align: center;

  }

  #navbar li {

    display: inline;

    padding: 10px;

  }

  #navbar a {

    font-size: 36px;

  }

  #navbar .title {

    font-size: 72px;

  }

 /*Menu Items CSS*/



  .menu-items {

    grid-template-columns: 1fr 1fr;

  }



  .menu-item img {

    max-width: 100%;

    border-radius: 15%;

    width: 70%;

    height: ;

    padding-top: 20px;

    padding-bottom: 20px;

  }



  .menu-item p {

    font-size: 25px;

  }



  .smoothie-desc {

    font-size: px;

    padding-top: 20px;

  }



  .smoothie-list {

    text-align: center;

    font-size: 24px;

  }



  .smoothie-list p {

    font: ;

    font-size: 24px;

    padding-bottom: 30px;

  }

}

/* Desktop and up*/



@media (min-width: 1440px) {

  /*Menu Items CSS*/

  .menu-items {

    grid-template-columns: 1fr 1fr 1fr;

  }


/* Order Page */
.opener {
  font-size: 40px;
  text-align: center;
}
/* Phone */
.main {
  height: auto;
  display: grid;
  grid-template-columns: 1fr;
  place-items: left;
}

.body {
  font-family: 'Ruluko', sans-serif;
  font-size: 24px;
}

/* Menu Items */
.order-section-title {
  background: #00493a;
  color: #fff;
}

.order-items {
  display: grid;
  grid-template-columns: 1fr;
  row-gap: 20px;
  margin: 30px;
}

.order-item {
  display: grid;
  grid-template-columns: 2fr 3fr;
   row-gap: 20px

}


/* Tablet and up */
  .order-items {
    grid-template-columns: 1fr 1fr 1fr;

  }

.order-item {
  display: grid;
  grid-template-columns: 2fr 3fr;
   row-gap: 20px


}


/* Desktop and up */
@media (min-width: 1440px) {
}


.cart {
  justify-content: center;
  font-size: 30px;
  color: #000;
  background-color: #9db9ab8c;
}


/* Navigation */

* {
  margin: 0;
  padding: 0;
}

#navbar {
  background-color: #00493a;
}

#navbar ul {
  list-style: none;
  padding: 24px;
  text-align: center;
}

#navbar li {
  display: inline;
  padding: 40px;
}

#navbar a {
  color: #000;
  text-decoration: none;
  font-size: 16px;
}

#navbar .title {
  font-size: 36px;
}

.navbar-quote {
  padding: 70px 0;
  text-align: center;
  font-size: 24px;
  padding-top: 0px;
}

.main img {
  width: 100%;
}

.main-slogan {
  text-align: center;
  font-size: 36px;
}

.slogan-image {
}

/* Tablet and up*/
@media (min-width: 768px) {
  #navbar li {
    padding: 60px;
  }

  #navbar a {
    color: #fff;
    text-decoration: none;
    font-size: 36px;
  }

  #navbar .title {
    font-size: 72px;
  }
}

/* Desktop and up*/
@media (min-width: 1440px) {
}


/* footer */

/* footer */
body {
  display: grid;
  grid-template-rows: auto 1fr auto;
}
#footer {
  bottom: 0;
  background-color: #00493a;
  width: 100%;
  padding: 10px;
  text-align: center;
  color: white;
}

.fa {
  padding: 20px;
  font-size: 20px;
  width: 20px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
  border-radius: 50%;
}

.fa:hover {
  opacity: 0.7;
}

.fa-instagram {
  background: #125688;
  color: white;
}

.fa-facebook {
  background: #3b5998;
  color: white;
}

.fa-twitter {
  background: #55acee;
  color: white;
}


/* contact us */

* {
  font-family: 'Ruluko', sans-serif;
}

/* Phone */
.main {
  height: auto;
  display: grid;
  grid-template-columns: 1fr;
  place-items: left;
  background-color: #edf0ee;
}

.contact-label {
  height: 100px;
  background-image: linear-gradient(to right, #00493a, #00735c);
  text-align: center;
  padding-top: 25px;
  color: white;
}

.contact-us {
  text-align: center;
  font-size: 24px;
}

.contact-us-header {
  margin-top: 100px;
  text-align: center;
  font-size: 18px;
}

/* Contact US Form */

/* Fields */
input[type='text'],
select,
textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}

/* Submit Button */
input[type='submit'] {
  background-color: #606462;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

/* Submit button: hover action */
input[type='submit']:hover {
  background-color: #00735c;
}

/* form background */
.container {
  border-radius: 5px;
  padding: 80px 100px 125px;
}

/* Tablet and up */
@media (min-width: 768px) {
  .contact-us {
  }
  /* form background */
  .container {
    border-radius: 5px;
    padding: 80px 250px 100px;
  }
  .contact-us-header {
    font-size: 24px;
  }
}

/* Desktop and up */
@media (min-width: 1440px) {
  /* form background */
  .container {
    border-radius: 5px;
    padding: 80px 300px 100px;
  }
  .contact-us-header {
    font-size: 32px;
  }
}

/* confirmation */

p {
  font-size: 48px;
  padding: 60px;
}


/* cart */

article {
  height: auto;
  display: grid;

  margin: 0;
  padding: 30px;
}

body {
  font-family: 'Ruluko', sans-serif;
}

.opener {
  font-size: 30px;
  grid-column: 2/-1;
}

.summary {
  font-size: 25px;
  grid-column: 2/-1;
}

.personal {
  grid-gap: 5px;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  grid-template-rows: 100px 100px;
}
.address {
  grid-gap: 5px;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  grid-template-rows: 100px 100px;
}
.card {
  grid-gap: 5px;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  grid-template-rows: 100px 100px;
}

.order {
  justify-content: center;
  font-size: 30px;
  color: #000;
  background-color: #9db9ab8c;
}

/* about us */

/* Phone */
* {
  font-family: 'Ruluko', sans-serif;
}

.main {
  height: auto;
  display: grid;
  place-items: left;
}

.about-title {
  height: 100px;
  background-image: linear-gradient(to right, #00493a, #00735c);
  text-align: center;
  color: white;
  font-size: 48px;
  text-align: left;
  padding-top: 50px;
  padding-left: 37px;
}

.hero-about-heading {
  padding-top: 70px;
  padding-left: 41px;
  font-size: 24px;
}
.hero-about-heading-content {
  padding-top: 5px;
  padding-left: 41px;
  padding-right: 19px;
  font-size: 24px;
}
.hero-about-history {
  padding-top: 41px;
  padding-left: 37px;
  padding-right: 19px;
  font-size: 24px;
}
.hero-about-history-content {
  padding-top: 5px;
  padding-left: 41px;
  padding-right: 19px;
  font-size: 24px;
}
.hero-about-new-para {
  padding-top: 24px;
  padding-left: 41px;
  padding-right: 19px;
  font-size: 24px;
}

/* About Items */
.about-items {
  display: grid;
  grid-template-columns: 1fr;
}
.crust-pizza-img {
  padding-left: 55px;
}

.crust-pizza-heading {
  padding-top: 75px;
  padding-left: 89px;
  padding-bottom: 18px;
  font-size: 24px;
}
.crust-pizza-body {
  width: 259px;
  height: 140px;
  padding-top: 35px;
  padding-left: 83px;
  text-align: center;
  font-size: 24px;
}
.shabu-img {
  padding-left: 67px;
}
.shabu-heading {
  padding-top: 86px;
  padding-left: 99px;
  padding-bottom: 28px;
  font-size: 24px;
}

.shabu-body {
  padding-top: 27px;
  padding-left: 42px;
  width: 345px;
  height: 168px;
  text-align: center;
  font-size: 24px;
}

/* Tablet and up */
@media (min-width: 768px) {
  .hero-about-heading {
    padding-top: 37px;
    padding-left: 37px;
    padding-right: 18px;
  }
  .hero-about-heading-content {
    padding-top: 8.7px;
    padding-left: 37px;
    padding-right: 18px;
  }
  .hero-about-history {
    padding-top: 37px;
    padding-left: 37px;
    padding-right: 19px;
  }
  .hero-about-history-content {
    padding-top: 5px;
    padding-left: 37px;
    padding-right: 18px;
  }
  .hero-about-new-para {
    padding-top: 37px;
    padding-left: 37px;
    padding-right: 19px;
  }
  /* About Items */
  .about-items {
    display: grid;
    grid-template-columns: 2fr 3fr;
  }
  .crust-pizza-img {
    padding-left: 41px;
  }

  .crust-pizza-heading {
    padding-top: 130px;
    padding-left: 75px;
    padding-bottom: 18px;
  }
  .crust-pizza-body {
    width: 259px;
    height: 140px;
    padding-left: 75px;
    text-align: center;
  }
  .shabu-img {
    padding-left: 75px;
  }
  .shabu-heading {
    padding-top: 130px;
    padding-left: 107px;
    padding-bottom: 28px;
  }

  .shabu-body {
    padding-top: 27px;
    width: 345px;
    height: 168px;
    text-align: center;
  }
}

/* Desktop and up */
@media (min-width: 1440px) {
  .hero-about-heading {
    padding-top: 37px;
    padding-left: 37px;
    font-size: 36px;
  }
  .hero-about-heading-content {
    padding-top: 14.5px;
    padding-left: 31px;
    font-size: 36px;
  }
  .hero-about-history {
    padding-top: 80px;
    padding-left: 31px;
    font-size: 36px;
  }
  .hero-about-history-content {
    padding-top: 13px;
    padding-left: 31px;
    font-size: 36px;
  }
  .hero-about-new-para {
    padding-top: 63px;
    padding-left: 31px;
    font-size: 36px;
  }

  /* About Items */
  .about-items {
    display: grid;
    grid-template-columns: 2fr 3fr;
  }
  .crust-pizza-img {
    padding-top: 21px;
    padding-left: 241px;
  }

  .crust-pizza-heading {
    padding-top: 62px;
    padding-left: 219px;
    font-size: 36px;
  }
  .crust-pizza-body {
    padding-top: 21px;
    padding-left: 184px;
    width: 462px;
    height: 210px;
    font-size: 36px;
  }
  .shabu-img {
    padding-top: 21px;
    padding-left: 204px;
  }
  .shabu-heading {
    padding-top: 62px;
    padding-left: 185px;
    font-size: 36px;
  }

  .shabu-body {
    padding-top: 21px;
    padding-left: 127px;
    width: 482px;
    height: 252px;
    font-size: 36px;
  }
}

